# porcupine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: dialoguer.rs  keywords.rs  main.rs  utils.rs
src/keyword/: position_fr_linux.ppn  position_fr_mac.ppn  position_fr_windows.ppn
src/keyword/en/: position_en_linux.ppn  position_en_mac.ppn  position_en_windows.ppn
src/keyword/fr/: position_fr_linux.ppn  position_fr_mac.ppn  position_fr_windows.ppn
