[package]
name = "porcupine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
chrono = "0.4.31"
ctrlc = "3.4.1"
pv_porcupine = "2.2.1"
pv_recorder = "1.2.1"
dotenv = "0.15.0"
isolang = { version = "2.3.0", features = ["local_names"] }
